# AoC2022

./: .gitignore  LICENSE  README.org
Kotlin/: Main.kt
Python/: 01.py  02.py  03.py  04.py  05.py
R/: day01.R  day02.R  day03.R  day04.R  day05.R  day06.R
Scala/: day01.sc  day02.sc
ocaml/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  dune  justfile  shared.ml
