(library
 (modules shared)
 (name shared))

(executable
 (name day01)
 (modules day01)
 (libraries str shared))

(executable
 (name day02)
 (modules day02)
 (libraries str shared))

(executable
 (name day03)
 (modules day03)
 (libraries str shared))

(env
 (dev
  (flags ; ignore warnings about unused functions and values
   (:standard -w -26 -w -32))))
