(library
 (modules shared)
 (name shared))

(executable
 (name day01)
 (modules day01)
 (libraries str shared))

(executable
 (name day02)
 (modules day02)
 (libraries str shared))

(executable
 (name day03)
 (modules day03)
 (libraries str shared))

(executable
 (name day04)
 (modules day04)
 (libraries str shared))

(executable
 (name day05)
 (modules day05)
 (libraries str shared re))

(executable
 (name day06)
 (modules day06)
 (libraries str shared))

(executable
 (name day07)
 (modules day07)
 (libraries str shared))

(executable
 (name day08)
 (modules day08)
 (libraries str shared))

(env
 (dev
  (flags ; ignore warnings about unused functions and values
   (:standard -w -26 -w -32 -w -34 -w -37))))
